--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -11,13 +11,13 @@
     <div class="container-xl" style="padding-bottom: 50px; height: 100px;">
         <div class="row">
             <div class="col-sm-10">
-                <label>Search movies by typing in the title, if you wish to search authors and directors type a: or d: before the name.</label>
+                <label>Search movies by typing in the title or a string.</label>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-10">
                 <div class="input-group mb-5 input-lg" style="">
-                  <input name="search" type="text" class="form-control input-lg" placeholder="Ex. search: Movie Name, a: Actor Name, d: Director Name" aria-label="Search" aria-describedby="basic-addon2">
+                  <input name="search" type="text" class="form-control input-lg" placeholder="Ex. search: Gremo Mi Po Svoje" aria-label="Search" aria-describedby="basic-addon2">
                   <span class="input-group-btn">
                     <button class="btn btn-primary" name="search_button" value="submit" type="submit">Search</button>
                   </span>
