--- a/templates/random_generator.html
+++ b/templates/random_generator.html
@@ -15,14 +15,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-10">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
                 <div class="input-group mb-5 input-lg" style="">
-                  <input name="search" type="text" class="form-control input-lg" placeholder="Ex. search: Movie Name, a: Actor Name, d: Director Name" aria-label="Search" aria-describedby="basic-addon2">
                   <span class="input-group-btn">
                     <button class="btn btn-primary" name="search_button" value="search" type="submit">Search</button>
                   </span>
                   <span class="input-group-btn" style="padding-left: 40px;">
-                    <strong>Don't know what to watch? Generate 3 random movies</strong>
+                    <strong style="padding-right: 30;">Don't know what to watch? Generate 3 random movies</strong>
                     <button class="btn btn-primary" name="search_button" value="generate" type="submit">Generate</button>
                   </span>
                 </div>
